--- a/index.html
+++ b/index.html
@@ -5,10 +5,36 @@
     <title></title>
   </head>
   <body>
-    <form action="/companies" method="POST">
-      <input type="text" placeholder="name" name="name">
-      <input type="text" placeholder="quote" name="quote">
-      <button type="submit">Submit</button>
+    <form action="/Company" method="POST">
+      <input type="text" placeholder="Company Id" name="CompanyId"><br/></br/>
+      <input type="text" placeholder="Company name" name="Company name"><br/></br/>
+      <input type="date" placeholder="Date Added" name="Date Added"><br/></br/>
+      <input type="text" placeholder="Surname" name="Contact Surname"><br/></br/>
+      <input type="text" placeholder="First name" name="Contact Firstname"><br/></br/>
+      <input type="email" placeholder="Email Address" name="Email Address"><br/></br/>
+      <input type="tel" placeholder="Phone number" name="Phone number"><br/></br/>
+      <input type="url" placeholder="Website address" name="Website address"><br/></br/>
+      <input type="text" placeholder="Twitter" name="Twitter"><br/></br/>
+      <input type="dropdown" placeholder="Espark hub location" name="Espark hub location"><br /><br/>
+      <input type="dropdown" placeholder="Primary Mentor Focus Area" name="Primary Mentor Focus Area"><br/></br/>
+      <input type="text" placeholder="Industry Sector" name="Industry Sector"><br/></br/>
+      <input type="text" placeholder="Sales Distribution" name="Sales Distribution"><br/></br/>
+      <input type="text" placeholder="Stage" name="Stage"><br/></br/>
+      <input type="checkbox" placeholder="Action Outstanding" name="Action Outstanding">
+
+      <button type="submit">Add new company</button>
+    </form>
+    <br />
+    <br />
+    <br />
+    <form action="/Notes" method="POST">
+      <input type="number" placeholder="Comment ID" name ="Comment ID" /><br />
+      <input type="date" placeholder="Comment Date" name ="Comment Date" />Date Comment Added<br />
+      <textarea rows="4" cols="50" name="Comment" placeholder ="Enter comment here..."></textarea><br />
+      <input type="string" placeholder="Action" name ="Action" /><br />
+      <input type="string" placeholder="Company" name ="Company ID" /><br />
+      <input type="string" placeholder="Mentor Name" name ="Mentor Name" /><br />
+      <button type="submit">Add new comment</button>
     </form>
   </body>
 </html>
