changes made by Chris

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <option>London</option>
       </select>
       <br>
-    <label for="primaryMentorFocusArea">Primary Mentor Focus Area</label>
+   <label for="primaryMentorFocusArea">Primary Mentor Focus Area</label>
       <select name="primaryMentorFocusArea">
         <option>select</option>
         <option>Application Development</option>
@@ -67,7 +67,7 @@
       <label for="salesDistribution">Sales Distribution</label>
       <input type="radio" name="salesDistribution" value="B2B" />B2B
       <input type="radio" name="salesDistribution" value="B2C"  />B2C
-      <input type="radio" name="salesDistribution" value="Both" />BOTH
+      <input type="radio" name="salesDistribution" value="BOTH" />BOTH
       <br />
       <label for="stage">Stage</label>
       <select name="stage">
