--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       <br>
    <label for="primaryMentorFocusArea">Primary Mentor Focus Area</label>
       <select name="primaryMentorFocusArea">
-        <option>select</option>
         <option>Application Development</option>
         <option>Technology</option>
         <option>Security</option>
@@ -46,7 +45,6 @@
       <br />
       <label for="industrySector">Industry Sector</label>
       <select name="industrySector">
-        <option>select</option>
         <option>Arts</option>
         <option>Lifestyle</option>
         <option>Health</option>
@@ -58,8 +56,8 @@
         <option>Retail</option>
         <option>Manufacturing/Industrial</option>
         <option>Technology</option>
-        <option>Tansport And Storage</option>
-        <option>Constructions and Real Estate</option>
+        <option>Transport And Storage</option>
+        <option>Construction and Real Estate</option>
         <option>Financial Services</option>
         <option>Food or Agribusiness</option>
       </select>
@@ -71,7 +69,6 @@
       <br />
       <label for="stage">Stage</label>
       <select name="stage">
-        <option>select</option>
         <option>Sprint</option>
         <option>Enable</option>
         <option>Grow</option>
@@ -79,9 +76,9 @@
         <option>Alumni</option>
       </select>
       <br />
-      <label name="outstandingActions">Outstanding Action</label>
+      <label name="outstandingAction">Outstanding Action</label>
       <input type="radio" name="outstandingAction" value="Yes" />Yes
-      <input type="radio" name="OutstandingAction" value="No"  />No
+      <input type="radio" name="outstandingAction" value="No"  />No
 
      <button type="submit">Add new company</button>
    </fieldset>
