--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
     <br />
     <br />
     <form action="/Notes" method="POST">
-      <input type="number" placeholder="Comment ID" name ="Comment ID" /><br />
-      <input type="date" placeholder="Comment Date" name ="Comment Date" />Date Comment Added<br />
-      <textarea rows="4" cols="50" name="Comment" placeholder ="Enter comment here..."></textarea><br />
-      <input type="string" placeholder="Action" name ="Action" /><br />
-      <input type="string" placeholder="Company" name ="Company ID" /><br />
-      <input type="string" placeholder="Mentor Name" name ="Mentor Name" /><br />
+      <input type="number" placeholder="Comment ID" name ="commentId" /><br />
+      <input type="date" placeholder="Comment Date" name ="commentDate" />Date Comment Added<br />
+      <textarea rows="4" cols="50" name="comment" placeholder ="Enter comment here..."></textarea><br />
+      <input type="string" placeholder="Action" name ="action" /><br />
+      <input type="string" placeholder="Company" name ="companyId" /><br />
+      <input type="string" placeholder="Mentor Name" name ="mentorName" /><br />
       <button type="submit">Add new comment</button>
     </form>
   </body>
