changes to schema

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <form action="/Company" method="POST">
     <fieldset>
         <legend>Register Company</legend>
-      <input type="text" placeholder="Company Id" name="companyId"><br/></br/>
       <input type="text" placeholder="Company name" name="companyName"><br/></br/>
       <input type="date" placeholder="Date Added" name="dateAdded"><br/></br/>
       <input type="text" placeholder="Surname" name="contactSurname"><br/></br/>
@@ -51,12 +50,12 @@
         <option>Ecommerce</option>
         <option>Digital</option>
         <option>Energy</option>
-        <option>Sports And Leisure</option>
+        <option>Sports and Leisure</option>
         <option>Charity</option>
         <option>Retail</option>
         <option>Manufacturing/Industrial</option>
         <option>Technology</option>
-        <option>Transport And Storage</option>
+        <option>Transport and Storage</option>
         <option>Construction and Real Estate</option>
         <option>Financial Services</option>
         <option>Food or Agribusiness</option>
@@ -87,7 +86,6 @@
     <br />
     <br />
     <form action="/Notes" method="POST">
-      <input type="number" placeholder="Comment ID" name ="commentId" /><br />
       <input type="date" placeholder="Comment Date" name ="commentDate" />Date Comment Added<br />
       <textarea rows="4" cols="50" name="comment" placeholder ="Enter comment here..."></textarea><br />
       <input type="string" placeholder="Action" name ="action" /><br />
