minor syntax alterations and css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <form action="/Company" method="POST">
+    <form action="/company" method="POST">
     <fieldset>
         <legend>Register Company</legend>
       <input type="text" placeholder="Company name" name="companyName"><br/></br/>
@@ -85,7 +85,7 @@
     <br />
     <br />
     <br />
-    <form action="/Notes" method="POST">
+    <form action="/notes" method="POST">
       <input type="date" placeholder="Comment Date" name ="commentDate" />Date Comment Added<br />
       <textarea rows="4" cols="50" name="comment" placeholder ="Enter comment here..."></textarea><br />
       <input type="string" placeholder="Action" name ="action" /><br />
