almost finnihed front end

--- a/routes/addComments.html
+++ b/routes/addComments.html
@@ -16,6 +16,18 @@
 
   <img src="DellEMC_Logo_Hz_Blue_rgb.png" />
 </div>
+<form action="/Notes" method="POST">
+  <fieldset>
+  <legend>Visit Log</legend>
+  <input type="number" placeholder="Comment ID" name="commentId" /><br />
+  <input type="date" placeholder="Comment Date" name="commentDate" /><br />
+  <input type="string" placeholder="Action" name="action" /><br />
+  <input type="string" placeholder="Company" name="companyId" /><br />
+  <input type="string" placeholder="Mentor Name" name="mentorName" /><br />
+  <textarea rows="4" cols="50" name="comment" placeholder="Enter comment here..."></textarea><br />
+  <button type="submit">Add new comment</button>
+</fieldset>
+</form>
 
 </body>
 
