--- a/routes/main.html
+++ b/routes/main.html
@@ -21,9 +21,9 @@
 
 
 <a href="/search" id="mainBtn" onclick="click()" >Search</a>
-<a href="/newCompany" id="mainBtn" onclick="click()">Add New Company</button>
-<a href="/addComments" id="mainBtn" onclick="click()">Add Comments</button>
-<a href="/editCompany" id="mainBtn" onclick="click()">Edit Company</button>
+<a href="/newCompany" id="mainBtn" onclick="click()">Add New Company</a>
+<a href="/addComments" id="mainBtn" onclick="click()">Add Comments</a>
+<a href="/editCompany" id="mainBtn" onclick="click()">Edit Company</a>
 </div>
 <script>
   function click(){
