--- a/routes/register.html
+++ b/routes/register.html
@@ -23,8 +23,30 @@
     <input type="string" placeholder="Mentor Name" name="mentorName" /><br />
     <input type="email" placeholder="Email" name="email" /><br />
     <input type="number" placeholder="Contact Number" name="phone" /><br />
-    <input type="string" placeholder="Focus Area" name="primaryMentorFocusArea" /><br />
-    <input type="string" placeholder="Espark Location" name="esparkHubLocation" /><br />
+    <label for="primaryMentorFocusArea">Primary Mentor Focus Area</label><br />
+    <select name="primaryMentorFocusArea">
+      <option>Application Development</option>
+      <option>Technology</option>
+      <option>Security</option>
+      <option>Sales and Marketing</option>
+      <option>Leverage Dell Ecosystem</option>
+    </select><br/>
+    <label for="esparkHubLocation">Espark Hub Location</label><br />
+    <select name="esparkHubLocation">
+      <option>Belfast</option>
+      <option>Ayr</option>
+      <option>Glasgow</option>
+      <option>Edinburgh</option>
+      <option>Newcastle</option>
+      <option>Leeds</option>
+      <option>Manchester</option>
+      <option>Birmingham</option>
+      <option>Milton Keynes</option>
+      <option>Cardiff</option>
+      <option>Bristol</option>
+      <option>Brighton</option>
+      <option>London</option>
+    </select>
     <!--takes you to main.html-->
     <button id ="button" type="submit">Register</button>
   </fieldset>
