commiting last branch

--- a/routes/logIn.html
+++ b/routes/logIn.html
@@ -12,11 +12,9 @@
 </head>
 
 <body>
-  <div id="logo">
+  <div id="logo"></div>
 
-  <img src="DellEMC_Logo_Hz_Blue_rgb.png" />
-</div> 
-
+<div id="log-in-bg">
 
   <form action="/main" method="get">
     <fieldset>
@@ -35,7 +33,40 @@
   <button id = buttonReg type="submit" onclick="addEventListener">Register</button>
 </fieldset>
 </form>
-
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+</div>
 
 
   <script>
