--- a/routes/search.html
+++ b/routes/search.html
@@ -12,10 +12,9 @@
 </head>
 
 <body>
-  <div id="logo">
+  <div id="logo"></div>
+  <div id="search-bg">
 
-  <img src="DellEMC_Logo_Hz_Blue_rgb.png" />
-</div>
 
   <h2>Search engine</h2>
   <select id="myselect" onchange="change_myselect(this.value)">
@@ -35,6 +34,40 @@
 
 
     </form>
+    <a href="/main" id="buttonBack" onclick="click()">Back to Main Page</a>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+  </div>
 </body>
 
 </html>
