--- a/routes/addComments.html
+++ b/routes/addComments.html
@@ -12,14 +12,13 @@
 </head>
 
 <body>
-  <div id="logo">
+  <div id="logo"></div>
+  <div id="add-comment-bg">
 
-  <img src="DellEMC_Logo_Hz_Blue_rgb.png" />
-</div>
 <form action="/Notes" method="POST">
   <fieldset>
   <legend>Visit Log</legend>
-  <input type="number" placeholder="Comment ID" name="commentId" /><br />
+
   <input type="date" placeholder="Comment Date" name="commentDate" /><br />
   <input type="string" placeholder="Action" name="action" /><br />
   <input type="string" placeholder="Company" name="companyId" /><br />
@@ -28,7 +27,53 @@
   <button type="submit">Add new comment</button>
 </fieldset>
 </form>
-
+<a href="/main" id="buttonBack" onclick="click()">Back to Main Page</a>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+</div>
 </body>
 
 </html>
