--- a/routes/editCompany.html
+++ b/routes/editCompany.html
@@ -12,16 +12,14 @@
 </head>
 
 <body>
-  <div id="logo">
-
-  <img src="DellEMC_Logo_Hz_Blue_rgb.png" />
+  <div id="logo"></div>
 </div>
+<div id="edit-comp-bg">
+
   <form action="/Company" method="Patch">
     <fieldset>
 
-      <legend>Register Company</legend>
-      <input type="text" placeholder="Company Id" name="companyId"><br/>
-      </br/>
+      <legend>Update Company</legend>
       <input type="text" placeholder="Company name" name="companyName"><br/>
       </br/>
       <input type="date" placeholder="Date Added" name="dateAdded"><br/>
@@ -104,6 +102,8 @@
       <button id="button" type="submit">Amend Company Details</button>
     </fieldset>
   </form>
+  <a href="/main" id="buttonBack" onclick="click()">Back to Main Page</a>
+</div>
 </body>
 
 </html>
