--- a/routes/logIn.html
+++ b/routes/logIn.html
@@ -12,9 +12,11 @@
 </head>
 
 <body>
-  <div id="logo"></div>
+  <div id="logo">
 
-<div id="log-in-bg">
+  <img src="DellEMC_Logo_Hz_Blue_rgb.png" />
+</div> 
+
 
   <form action="/main" method="get">
     <fieldset>
@@ -33,40 +35,7 @@
   <button id = buttonReg type="submit" onclick="addEventListener">Register</button>
 </fieldset>
 </form>
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-</div>
+
 
 
   <script>
