--- a/routes/main.html
+++ b/routes/main.html
@@ -12,15 +12,18 @@
 </head>
 
 <body>
-  <div id="logo"></div>
+  <div id="logo">
 
-<div id="mainBox">
+  <img src="DellEMC_Logo_Hz_Blue_rgb.png" />
+</div>
+
+<div id = mainBox>
 
 
-  <a href="/search" id="search" class="mainBtn" onclick="click()" >Search</a>
-  <a href="/newCompany" id="new-company" class="mainBtn" onclick="click()">Add Company</a>
-  <a href="/addComments" id="add-comments" class="mainBtn" onclick="click()">Add Comments</a>
-  <a href="/editCompany" id="edit-company" class="mainBtn" onclick="click()">Edit Company</a>
+<a href="/search" id="mainBtn" onclick="click()" >Search</a>
+<a href="/newCompany" id="mainBtn" onclick="click()">Add New Company</a>
+<a href="/addComments" id="mainBtn" onclick="click()">Add Comments</a>
+<a href="/editCompany" id="mainBtn" onclick="click()">Edit Company</a>
 </div>
 <script>
   function click(){
