--- a/routes/search.html
+++ b/routes/search.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-  <div id="logo"></div>
-  <div id="search-bg">
+  <div id="logo">
+
+  <img src="DellEMC_Logo_Hz_Blue_rgb.png" />
 </div>
   <form>
-
   <h2>Search engine</h2>
   <!-- <select id="myselect" onchange="change_myselect(this.value)"> -->
   <!-- <option value="">Choose an option:</option>
@@ -71,44 +71,8 @@
           console.log(toShow);
         });
       })
- </script>
 
-    </form>
-    <a href="/main" id="buttonBack" onclick="click()">Back to Main Page</a>
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-
-  </div>
-
+    </script>
 </body>
 
 </html>
