committing final changes

--- a/routes/addComments.html
+++ b/routes/addComments.html
@@ -11,9 +11,8 @@
   <title></title>
 </head>
 
-<body>
+<body id=add-comment-bg>
   <div id="logo"></div>
-  <div id="add-comment-bg">
 
 <form action="/Notes" method="POST">
   <fieldset>
@@ -28,51 +27,7 @@
 </fieldset>
 </form>
 <a href="/main" id="buttonBack" onclick="click()">Back to Main Page</a>
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
+
 </div>
 </body>
 
