--- a/routes/editCompany.html
+++ b/routes/editCompany.html
@@ -11,10 +11,9 @@
   <title></title>
 </head>
 
-<body>
-  <div id="logo"></div>
-</div>
-<div id="edit-comp-bg">
+<body id="edit-comp-bg">
+
+<div id="logo">
 
   <form action="/Company" method="Patch">
     <fieldset>
