--- a/routes/logIn.html
+++ b/routes/logIn.html
@@ -11,10 +11,8 @@
   <title></title>
 </head>
 
-<body>
+<body id="log-in-bg">
   <div id="logo"></div>
-
-<div id="log-in-bg">
 
   <form action="/main" method="get">
     <fieldset>
@@ -33,39 +31,7 @@
   <button id = buttonReg type="submit" onclick="addEventListener">Register</button>
 </fieldset>
 </form>
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
+
 </div>
 
 
