--- a/routes/newCompany.html
+++ b/routes/newCompany.html
@@ -11,9 +11,8 @@
   <title></title>
 </head>
 
-<body>
+<body id="new-comp-bg">
   <div id="logo"></div>
-  <div id="new-comp-bg"
   <form action="/Company" method="POST">
     <fieldset>
 
