--- a/routes/register.html
+++ b/routes/register.html
@@ -11,11 +11,13 @@
   <title></title>
 </head>
 
-<body>
-  <div id="logo">
+<body id="search-bg">
 
-  <img src="DellEMC_Logo_Hz_Blue_rgb.png" />
-</div>
+
+    <div id="logo"></div>
+  
+
+
 
   <form action="/Users" method="POST"><form action="/main" method="get">
     <fieldset>
@@ -50,6 +52,7 @@
     <!--takes you to main.html-->
     <button id ="button" type="submit">Register</button>
   </fieldset>
+
   </form>
 
 
